[GTK] Crash when starting DND on touchscreen https://bugs.webkit.org/show_bug.cgi?id=235694

Reviewed by Adrian Perez de Castro.

Source/WebCore:

* page/DragController.cpp:
(WebCore::DragController::startDrag):
Skip drags for touch events on GTK.
* platform/PlatformMouseEvent.h:
(WebCore::PlatformMouseEvent::isTouchEvent const):

Source/WebKit:

Drag-n-drop on touch has never worked correctly in GTK, and is usually
just disabled. Do the same thing and ignore it for synthesized mouse
events.

* Shared/NativeWebMouseEvent.h:
* Shared/WebEventConversion.cpp:
(WebKit::WebKit2PlatformMouseEvent::WebKit2PlatformMouseEvent):
* Shared/WebMouseEvent.cpp:
(WebKit::WebMouseEvent::WebMouseEvent):
(WebKit::WebMouseEvent::encode const):
(WebKit::WebMouseEvent::decode):
* Shared/WebMouseEvent.h:
(WebKit::WebMouseEvent::isTouchEvent const):
* Shared/gtk/NativeWebMouseEventGtk.cpp:
(WebKit::NativeWebMouseEvent::NativeWebMouseEvent):
* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseTouchRelease):
(webkitWebViewBaseTouchDragUpdate):
(webkitWebViewBaseTouchDragEnd):
(webkitWebViewBaseSynthesizeMouseEvent):
* UIProcess/API/gtk/WebKitWebViewBaseInternal.h:
* UIProcess/gtk/PointerLockManager.cpp:
(WebKit::PointerLockManager::handleMotion):

Tools:

* TestWebKitAPI/glib/CMakeLists.txt: Define BUILDING_TestWebKit



Canonical link: https://commits.webkit.org/246826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289129 268f45cc-cd09-0410-ab3c-d52691b4dbfc